# webspray

./: README.md  pyproject.toml  requirements.txt  webspray.py
lib/: logger.py
webspray/: webspray.py
webspray/lib/: logger.py  threadpool.py
